--- a/src/partials/query.editor.html
+++ b/src/partials/query.editor.html
@@ -1,4 +1,4 @@
-<query-editor-row query-ctrl="ctrl" can-collapse="false">
+<query-editor-row query-ctrl="ctrl" can-collapse="true">
     <div class="gf-form-inline">
         <div class="gf-form max-width-25">
             <label class="gf-form-label query-keyword width-10">
